css/summary.css
/* IcoMoon font licensed under the GNU General Public License: http://www.gnu.org/licenses/gpl.html */
@font-face {
  font-family: 'icomoon-summary';
  src:url('../fonts/icomoon.eot');
  src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
    url('../fonts/icomoon.woff') format('woff'),
    url('../fonts/icomoon.ttf') format('truetype'),
    url('../fonts/icomoon.svg#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
}

.h5p-summary .summary-content {
  padding: 0.625em;
}
.h5p-summary .summary-content .summary-container > ul {
  margin: 0;
  padding: 0;
  display: block;
}

.h5p-summary .summary-container {
  box-shadow: 0 0 0.5em #999;
  border-radius: 0.4em;
}

.h5p-summary .summary-options {
  height: auto;
  padding: 0;
}
.h5p-summary .summary-options ul.h5p-panel {
  display: none;
  padding: 0;
}

.h5p-summary .summary-evaluation {
  margin: 0 0 0.8em;
  border-bottom: 0.1em solid #ddd;
  padding: 1em 0 0.4em;
  overflow: hidden; /* Contain floated counters within the evaluation div */
}

.h5p-summary .summary-evaluation-content {
  display: block;
  float: left;
  position: relative;
  padding-right: 2em;
}

.h5p-summary .summary-content li {
  list-style: none;
  background-color: #e4e4e4;
  -moz-border-radius: 0.3em;
  -webkit-border-radius: 0.3em;
  border-radius: 0.3em;
  border: 0.1em solid #dcdcdc;
  color: #777;
  font-size: 1em;
  padding: 0.375em 0.875em;
  text-decoration: none;
  margin: 0;
  margin-bottom: 0.3125em;

  background: -moz-linear-gradient(top,  rgba(237,237,237,0.9) 0%, rgba(237,237,237,0.9) 1%, rgba(223,223,223,0.9) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(237,237,237,0.9)), color-stop(1%,rgba(237,237,237,0.9)), color-stop(100%,rgba(223,223,223,0.9))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(237,237,237,0.9) 0%,rgba(237,237,237,0.9) 1%,rgba(223,223,223,0.9) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(237,237,237,0.9) 0%,rgba(237,237,237,0.9) 1%,rgba(223,223,223,0.9) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(237,237,237,0.9) 0%,rgba(237,237,237,0.9) 1%,rgba(223,223,223,0.9) 100%); /* IE10+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6ededed', endColorstr='#e6dfdfdf',GradientType=0 ); /* IE6-9 */
}

.h5p-summary .summary-content li > p {
  margin: 0.4em 0 0 0;
  padding: 0;
}
.h5p-summary .summary-content li > p:first-child {
  margin: 0;
}
.h5p-summary .summary-container li:not(:last-child) {
  border-bottom: 1px solid #E9E9E9;
  border-radius: 0;
}
.h5p-summary .summary-container li {
  display: none;
  z-index: 5;
  margin: 0;
  border: 0;
  background: none;
  filter: none;

  -webkit-transition: background-color 1000ms linear, border-color 1000ms linear;
  -moz-transition: background-color 1000ms linear, border-color 1000ms linear;
  -o-transition: background-color 1000ms linear, border-color 1000ms linear;
  -ms-transition: background-color 1000ms linear, border-color 1000ms linear;
  transition: background-color 1000ms linear, border-color 1000ms linear;
}
.h5p-summary .summary-container li:before {
  text-decoration: none;
  content: "\f00c";
  font-family: 'H5PFontAwesome4';
  color: #255c41;
  float: right;
}
.h5p-summary .summary-claim-unclicked:hover {
  cursor: pointer;
  filter: none;
  border: 0.1em solid #ddcae0;

  background: rgb(238,228,239); /* Old browsers */
  background: -moz-linear-gradient(top,  rgba(238,228,239,1) 0%, rgba(231,221,232,1) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(238,228,239,1)), color-stop(100%,rgba(231,221,232,1))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(238,228,239,1) 0%,rgba(231,221,232,1) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(238,228,239,1) 0%,rgba(231,221,232,1) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(238,228,239,1) 0%,rgba(231,221,232,1) 100%); /* IE10+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eee4ef', endColorstr='#e7dde8',GradientType=0 ); /* IE6-9 */
}
.h5p-summary li.summary-failed {
  color: #b71c1c;
  border: 0.1em solid #f7d0d0;
  background: #f7d0d0;
  text-decoration: line-through;
  font-weight: bold;
}

.h5p-summary li.summary-failed:before {
  text-decoration: none;
  content: "\f00d";
  font-family: 'H5PFontAwesome4';
  color: #b71c1c;
  float: right;
}

.h5p-summary .summary-options div {
  font-size: 1em;
  padding:0;
  background-repeat: no-repeat;
  background-position: top right;
}

.h5p-summary .summary-score {
  display: none;
  float: right;
  background: #f7d0d0;
  -moz-border-radius: 0.3em;
  -webkit-border-radius: 0.3em;
  border-radius: 0.3em;
  padding: 0.1em 0.3em;
  font-weight: normal;
  margin-right: 0.3em;
}

.h5p-summary .summary-score:before {
  text-decoration: none;
  content: "\f00d";
  font-family: 'H5PFontAwesome4';
  color: #b71c1c;
  float: left;
  margin-right: 0.3em;
  top: 0.1em;
}

.h5p-summary .summary-progress {
  float: right;
  background: #9dd8bb;
  -moz-border-radius: 0.3em;
  -webkit-border-radius: 0.3em;
  border-radius: 0.3em;
  padding: 0.1em 0.3em;
  font-weight: normal;
}

.h5p-summary .summary-progress:before {
  text-decoration: none;
  content: "\f00c";
  font-family: 'H5PFontAwesome4';
  color: #255c41;
  float: left;
  margin-right: 0.3em;
}

.h5p-summary .summary-options h2 {
  font-size: 1.2em;
  font-weight: bold;
  padding-bottom: 0.5em;
  margin: 0;
}

.h5p-summary .summary-evaluation .joubel-tip-container {
  position: absolute;
  top: -0.1em;
  right: 0.1em;
}
.h5p-summary .summary-evaluation .joubel-tip-icon {
  line-height: 1;
  font-size: 1.3em;
}

/* Question specific styles */
.h5p-summary .h5p-question-content {
  margin: 0;
}

